5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1871_1715.log
== TEST (2019-07-02 16:17:38) 
-- CODE:
from numpy import*

mat= array(input("Insira a matriz:"))
linha=int(input("Insira a linha:"))
coluna= int(input("insira a coluna:"))

for i in range(mat):
	for j in range(mat):
		if(linha and coluna == "N"):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:07) 
-- CODE:
from numpy import*

mat= array(input("Insira a matriz:"))
linha=int(input("Insira a linha:"))
coluna= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(mat):
		if(linha and coluna == "N"):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:35) 
-- CODE:
from numpy import*

mat= array(input("Insira a matriz:"))
linha=int(input("Insira a linha:"))
coluna= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(linha and coluna == "N"):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:14) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l[i] and c[j] == "N")
			print(fogo)
-- ERROR:
File "XXXX", line 8
    if(l[i] and c[j] == "N")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:19) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l[i] and c[j] == "N"):
			print(fogo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:49) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l[i] and c[j] == mat("N"):
			print(fogo)
-- ERROR:
File "XXXX", line 8
    if(l[i] and c[j] == mat("N"):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:52) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l[i] and c[j] == mat("N")):
			print(fogo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:46) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in range(size(mat)):
	for j in range(size(mat)):
		if():
			print(fogo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:56) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in range(size(mat)):
	for j in range(size(mat)):
		if(l and c == mat[i,j]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:24) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l=i and c=j == mat("N")):
			print("FOGO")
-- ERROR:
File "XXXX", line 8
    if(l=i and c=j == mat("N")):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:53) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l[i] and c[j] == mat("N")):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:47:22) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l and c == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:16) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))

for i in range(size(mat)):
	for j in range(size(mat)):
		if(l and c == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:49:22) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in range(size(mat)):
	for j in range(size(mat)):
		if(l and c == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:52:34) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in shape(mat)[0]:
	for j in shape(mat)[1]:
		if(l and c == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:29) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in shape(mat)[0]:
	for j in shape(mat)[1]:
		if(l.shape[0] and c.shape[1] == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:49) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in shape.mat[0]:
	for j in shape.mat[1]:
		if(l.shape[0] and c.shape[1] == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:54:29) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in range(size(mat)):
	for j in range(size(mat)):
		if(l.shape[0] and c.shape[1] == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:55:00) 
-- CODE:
from numpy import*
mat= array(input("Insira a matriz:"))
l=int(input("Insira a linha:"))
c= int(input("insira a coluna:"))
print(mat)
for i in range(size(mat)):
	for j in range(size(mat)):
		if(shape(l)[0] and shape(c)[1] == mat["N"]):
			print("FOGO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
